Sun Jun 23 05:41:32 2013  Koichi Sasada  <ko1@atdot.net>

	* class.c (rb_include_class_new), eval.c (rb_using_refinement):
	  make classes/modules (who share method table) shady.
	  If module `a' and `b' shares method table m_tbl and new method
	  with iseq is added, then write barrier is applied only `a' or `b'.
	  To avoid this issue, shade such classes/modules.

	* vm_method.c (rb_method_entry_make): add write barriers.

Sun Jun 23 01:27:54 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bytes_zero_p): Removed.
	  (bary_pack): Don't call bytes_zero_p.

Sun Jun 23 00:51:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bytes_zero_p): Extracted from bary_pack.
	  (bary_pack): Use bytes_zero_p.

Sun Jun 23 00:16:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (MSB): New macro.
	  (bary_unpack_internal): Use MSB.
	  (bary_divmod): Ditto.
	  (bigdivrem): Ditto.

Sat Jun 22 23:45:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_swap): New function.
	  (bary_pack): Use bary_swap.
	  (bary_unpack_internal): Ditto.

Sat Jun 22 23:18:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bytes_2comp): Renamed from quad_buf_complement.
	  (bary_pack): Use bytes_2comp.
	  (rb_quad_pack): Use rb_integer_pack.
	  (rb_quad_unpack): Use rb_integer_unpack.

Sat Jun 22 21:46:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_unpack): Don't allocate a Bignum if possible.

Sat Jun 22 21:03:58 2013  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_unpack): Remove specialized unpackers for integers.

Sat Jun 22 20:36:50 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_unpack_internal): Specialized unpacker implemented.
	  (bary_unpack): Support INTEGER_PACK_FORCE_GENERIC_IMPLEMENTATION.
	  (rb_integer_unpack): Support INTEGER_PACK_FORCE_GENERIC_IMPLEMENTATION.

Sat Jun 22 18:53:10 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_pack): Support
	  INTEGER_PACK_FORCE_GENERIC_IMPLEMENTATION flag.